# esport-signal

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Makefile  schema.md
data/: team_aliases.json
src/: config.rs  lib.rs  main.rs
src/api/: live_data.rs  mod.rs  opendota.rs  opendota_historical.rs  polymarket.rs  stratz.rs
src/db/: historical.rs  mod.rs  signals.rs
src/matching/: mod.rs  team_resolver.rs
src/models/: market.rs  match_state.rs  mod.rs  signal.rs
src/workers/: live_fetcher.rs  market_scanner.rs  mod.rs  signal_processor.rs
