[package]
name = "esport-signal"
version = "0.1.0"
edition = "2021"
description = "Dota 2 live data aggregation for Polymarket betting signals"
authors = ["Nuttakit"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# GraphQL
graphql_client = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
urlencoding = "2"

[[bin]]
name = "fetch_historical"
path = "src/bin/fetch_historical.rs"
